--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,23 @@
-h3{
-    background-color: yellowgreen;
+
+
+.open-sans-normal {
+    font-family: "Open Sans";
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    font-variation-settings:
+      "wdth" 100;
+  }
+  
+
+nav{
+    display: flex;
+}
+
+.nav-title{
+    font-weight: 800;
+    font-size: 45px;
+}
+.text-primary{
+    color: #FD6E0A;
 }
