--- a/styles/style.css
+++ b/styles/style.css
@@ -12,12 +12,68 @@
 
 nav{
     display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0 200px;
+}
+.dark-2{
+    color: #474747;
+}
+.btn-primary{
+    background-color: #FD6E0A;
+    font-weight: bold;
+    font-size: 20px;
+    color: #FFF8F3;
+    padding: 18px 35px;
+    border-radius: 5px;
+
 }
 
 .nav-title{
     font-weight: 800;
     font-size: 45px;
 }
+nav ul{
+    display: flex;
+}
 .text-primary{
     color: #FD6E0A;
+}
+nav ul li {
+    list-style: none;
+    margin-right:51px;
+}
+nav li a{
+    text-decoration: none;
+}
+
+/* banner styles */
+
+.banner{
+    display: flex;
+    justify-content: space-between;
+    margin: 0 35px o 200px;
+}
+.banner-content{
+    max-width: 580px;
+}
+
+.banner-greetings{
+    font-size: 45px;
+    font-weight: 600;
+}
+
+.banner-title{
+    font-weight: bold;
+    font-size: 85px;
+}
+
+.banner-description{
+    font-weight: normal;
+    font-size: 18px;
+    /* text-align: justify; */
+}
+
+.banner-profile-picture{
+    width: 580px;
 }
