--- a/styles/style.css
+++ b/styles/style.css
@@ -8,6 +8,13 @@
     font-variation-settings:
       "wdth" 100;
   }
+
+  .header{
+    background-image: url('../images/developer.png'), url('../images/header_bg.png');
+    background-repeat: no-repeat;
+    background-position: top left, bottom right;
+
+  }
   
 
 nav{
@@ -35,6 +42,24 @@ nav{
 }
 nav ul{
     display: flex;
+}
+
+.section-title{
+    font-size: 35px;
+    font-weight: bold;
+    color: #000000;
+
+}
+
+.section-description{
+    font-size: 18px;
+    color:#757575;
+}
+
+/* shared style */
+
+.secondary-background{
+
 }
 .text-primary{
     color: #FD6E0A;
@@ -76,4 +101,29 @@ nav li a{
 
 .banner-profile-picture{
     width: 580px;
+}
+
+/* main styles */
+
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
+
+/* about styles */
+
+.about{
+    border-radius: 10px;
+    padding: 130px 150px;
+    text-align: center;
+    margin-top: 130px;
+}
+
+.about-items{
+    display: flex;
+    justify-content: space-around;
+}
+
+.item-description{
+    font-weight: 600;
 }
